--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "isomorphic-fetch": "^3.0.0",
+    "mini-css-extract-plugin": "^2.7.2",
     "next": "13.2.3",
     "node-fetch": "^3.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "terser-webpack-plugin": "^5.3.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
